--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "standard": "17.0.0"
   },
   "dependencies": {
+    "@sentry/node": "^7.34.0",
+    "@sentry/tracing": "^7.34.0",
     "cors": "2.8.5",
-    "express": "4.18.2"
+    "dotenv": "16.0.3",
+    "express": "4.18.2",
+    "mongoose": "6.9.0"
   },
   "eslintConfig": {
     "extends": "./node_modules/standard/eslintrc.json"
